@@ -1,4 +1,7 @@
-20100730
+20100730  Fri Jul 30 12:36:22 PDT 2010
+    New Features
+    * Added func() to handle functions.
+
     Incompatible Changes
     * Data::Alias is now optional.  This is because it does not work in 5.12
       and there's no fix in sight.  If you want to use aliasing in your
